force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__LookupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupField__c</fullName>
        <description>API Name of the custom field used in the query.</description>
        <inlineHelpText>API Name of the custom field used in the query.</inlineHelpText>
        <label>Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Category__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>