force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__RuleTargetsCalculator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__PriceRule2__r.SBQQ__TargetObject__c, &#39;Calculator&#39;) || ISPICKVAL(SBQQ__PriceRule2__r.SBQQ__TargetObject__c, &#39;Quote Line&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </CustomField>