force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</description>
        <inlineHelpText>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>