force-app/main/default/objects/SBQQ__LookupQuery__c/validationRules/SBQQ__Match_Type_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Match_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(SBQQ__MatchType__c, &#39;Configuration Attribute Value&#39;) &amp;&amp; ISBLANK(SBQQ__TestedConfigurationAttribute__c)) ||(ISPICKVAL(SBQQ__MatchType__c, &#39;Static Value&#39;) &amp;&amp; ISBLANK( SBQQ__TestedValue__c)) || (ISPICKVAL(SBQQ__MatchType__c, &#39;Field Value&#39;) &amp;&amp; (ISPICKVAL(SBQQ__TestedField__c, &#39;&#39;) || ISPICKVAL(SBQQ__TestedObject__c, &#39;&#39;)))</errorConditionFormula>
        <errorMessage>Tested Value is required if Match Type = Static Value. Tested Object and Tested Field are required if Match Type = Field Value. Tested Configuration Attribute is required if Match Type = Configuration Attribute.</errorMessage>
    </ValidationRule>